--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -15,13 +15,15 @@
         android:text="@string/already_have_an_account_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textAllCaps="false"/>
 
     <Button
         android:id="@+id/register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textAllCaps="false"
         android:gravity="center"
         android:text="@string/new_user_register"
         app:layout_constraintBottom_toTopOf="@+id/login"
